--- a/23_advanced_trait_objects/Cargo.toml
+++ b/23_advanced_trait_objects/Cargo.toml
@@ -1,17 +1,12 @@
 [package]
-name = "rgrep"
+name = "advanced_trait_objects"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "trait_object_in_fn"
+path = "src/trait_object_in_fn.rs"
 
 [dependencies]
-anyhow = "1"
-clap = { version = "3", features = ["derive"]}
-colored = "2"
-glob = "0.3"
-itertools = "0.10"
-rayon = "1"
-regex = "1"
-thiserror = "1"
