--- a/32_xunmi_py/Cargo.toml
+++ b/32_xunmi_py/Cargo.toml
@@ -10,9 +10,9 @@ name = "xunmi"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version="0.14", features = ["extension-module"] }
+pyo3 = { version="0.16.4", features = ["extension-module"] }
 serde_json = "1"
-xumni = "0.2"
+xunmi = "0.2"
 
 [build-dependencies]
-pyo3-build-config = "0.14"
+pyo3-build-config = "0.16.4"
